--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soodlow9888",
+  "name": "สูตรหวยลาว เข้าทุกงวด แนวทางหวยลาว วันนี้ 2 ตัว 3 ตัว 4 ตัว แม่นๆ",
   "theme": "syntax",
   "version": "1.0.5",
   "description": "สูตรหวยลาว เข้าทุกงวด แนวทางหวยลาว วันนี้ 2 ตัว 3 ตัว 4 ตัว แม่นๆ รับประกันความเด็ด เพราะเราใช้ตัวเลขจาก สถิติหวยลาว มาวิเคราะห์ผ่านระบบปัญญาประดิษฐ์สุดทันสมัยที่สามารถคำนวณตัวเลขออกมาได้อย่างแม่นยำ",
